--- a/hasil.html
+++ b/hasil.html
@@ -28,14 +28,13 @@
         @media only screen and (max-width: 760px) {
             .kolom {
                 width: 90%;
-                height: 60%;
             }
         }
 
         @media only screen and (max-width: 600px) {
             .kolom {
                 width: 90%;
-                height: 60%;
+             
             }
         }
     </style>
@@ -51,7 +50,7 @@
         <h3 class="text-white fs-5" style="font-family: 'Kanit', serif;">by <a href="https://www.instagram.com/sncthyz/"
                 class="text-warning text-decoration-none">@andika</a></h3>
         <div class=" kolom container p-5  rounded-4 mt-4"
-            style="background-color: rgba(0, 0, 0, 0.413); height: 50vh; backdrop-filter: blur(10px);">
+            style="background-color: rgba(0, 0, 0, 0.413); backdrop-filter: blur(10px);">
             <h1 class="text-white fs-4 mb-3 p-3" style="font-family: Arial, Helvetica, sans-serif;">Julukan kamu adalah
             </h1>
             <h1 id="hasil" class="fw-bold text-danger p-2" style="font-family: Arial, Helvetica, sans-serif;"></h1>
@@ -59,7 +58,7 @@
     </div>
 
     <div class="col text-center justify-content-center mt-4">
-        <a class="btn btn-danger mt-1 rounded-5 fw-bold mb-4" href="/index.html">✨Kembali ke Halaman</a>
+        <a class="btn btn-danger mt-1 rounded-5 fw-bold mb-4" href="index.html">✨Kembali ke Halaman</a>
         <br>
         <script type='text/javascript' src='https://edge-cdn.trakteer.id/js/embed/trbtn.min.js?v=24-01-2025'></script>
         <script
