--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body
-    style="background: linear-gradient(rgba(0, 0, 0, 0.701), rgba(0, 0, 0, 0.801)),url(meme.jpg); background-repeat: no-repeat; background-size: cover; background-attachment: fixed; ">
+    style="background: linear-gradient(rgba(0, 0, 0, 0.701), rgba(0, 0, 0, 0.801)),url(meme.jpg); height: 100vh; background-repeat: no-repeat; background-size: cover; background-attachment: fixed; ">
 
     <div class="justify-content-center text-center" style="margin-top: 100px;">
         <h1 class="fw-bold text-white" style="font-family: 'Anton', serif; font-size: 50px;">Cek <span
