--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 </head>
 
 <body
-    style="background: linear-gradient(rgba(0, 0, 0, 0.701), rgba(0, 0, 0, 0.801)),url(meme.jpg); height: 100vh; background-repeat: no-repeat; background-size: cover; background-attachment: fixed; ">
+    style="background: linear-gradient(rgba(0, 0, 0, 0.701), rgba(0, 0, 0, 0.801)),url(meme.jpg);  background-repeat: no-repeat; background-size: cover; background-attachment: fixed; ">
 
     <div class="justify-content-center text-center" style="margin-top: 100px;">
         <h1 class="fw-bold text-white" style="font-family: 'Anton', serif; font-size: 50px;">Cek <span
                 style="color: red;">Julukan</span></h1>
         <h3 class="text-white fs-5" style="font-family: 'Kanit', serif;">by <a href="https://www.instagram.com/sncthyz/"
-                class="text-warning text-decoration-none">@andika</a></h3>
+                class="text-warning text-decoration-none">@Rhmn</a></h3>
         <div class=" kolom container p-5  rounded-4 mt-4"
             style="background-color: rgba(0, 0, 0, 0.413);backdrop-filter: blur(10px);">
             <h1 class="text-white fs-5 mb-4" style="font-family: Arial, Helvetica, sans-serif;">Masukkan nama panggilan kamu</h1>
@@ -81,7 +81,7 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
         <script>
-            let pilihan = [ "Indomie", "Tempe", "Martabak", "Kebab", "Rendang", "Kupu-Kupu", "Gunung", "Iwak", "Pasir", "Air", "Kicau Mania", "Bengkel", "Senen",  "Pisang", "Gundul", "Masbro", "Ban Dalam", "Oli Samping", "Supir", "Batagor", "Kecap"];
+            let pilihan = [ "Indomie", "Tempe", "Martabak", "Kebab", "Rendang", "Kupu-Kupu", "Gunung", "Iwak", "Pasir", "Air", "Kicau Mania", "Lele", "Bangunan", "Tembako", "Skibidi", "Bengkel", "Senen",  "Pisang", "Gundul", "Masbro", "Ban Dalam", "Oli Samping", "Supir", "Batagor", "Kecap"];
 
             function goreng() {
                 let nama = document.getElementById('nama').value;
