--- a/hasil.html
+++ b/hasil.html
@@ -48,7 +48,7 @@
         <h1 class="fw-bold text-white" style="font-family: 'Anton', serif; font-size: 50px;">Cek <span
                 style="color: red;">Julukan</span></h1>
         <h3 class="text-white fs-5" style="font-family: 'Kanit', serif;">by <a href="https://www.instagram.com/sncthyz/"
-                class="text-warning text-decoration-none">@andika</a></h3>
+                class="text-warning text-decoration-none">@Rhmn</a></h3>
         <div class=" kolom container p-5  rounded-4 mt-4"
             style="background-color: rgba(0, 0, 0, 0.413); backdrop-filter: blur(10px);">
             <h1 class="text-white fs-4 mb-3 p-3" style="font-family: Arial, Helvetica, sans-serif;">Julukan kamu adalah
